--- a/public/styles/request-credentials.css
+++ b/public/styles/request-credentials.css
@@ -1,18 +1,3 @@
-.form-field .format-radio-field {
-	flex-direction: column;
-	align-items: center;
-	gap: 0.1rem;
-}
-
-.format-radio-title {
-	line-height: 1.15;
-}
-
-.format-radio-subtitle {
-	font-size: 0.85em;
-	opacity: 0.75;
-}
-
 /* Attributes list area */
 #attributes-container {
 	max-height: 340px;
